# djinn

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  app.py  compose.yaml  compose.yml  conf.py  data.db  djinn.py  fs.md  main.py  manage.py  notes.md  requirements.txt  schema.json  schema.md  settings.py  specifications.md  test.db
app/: index.html
app/src/: main.ts  styles.css
design/prompts/: partitioned_design.xml  perfect_design.md
djinn/: __init__.py  app.py  cli.py  cmd.py  controller.py  db.py  file.py  interface.py  log.py  model.py  old_model.py  process.py  prompt.py  settings.py  terminal.py  utils.py
djinn-cli/: Cargo.toml
djinn/core/: command.py
example/: steps.md
install/: settings.json  user_settings.json
interface/: db.sqlite3  manage.py  views.py
interface/api/: urls.py  views.py
interface/interface/: settings.py  urls.py
interface/templates/: index.html
old/: Makefile  README.md  TODO.md  app.py  cmd.py  db.py  djinn.py  file.py  model.py  schema.json  settings.yaml
old-djinn/: __init__.py  cmd.py
old/djinn/: app.py  cli.py
om/: cli.py  config.json  main  om.py  settings.py  utils.py
project_data_example/: settings.json
prompts/: basic_context.md  basic_context.txt
scripts/: bootstrap.sh  build.sh  clear_workspace.py  create_log_table.py  init_cli.sh  init_djinn.sh  install.py  install.sh  run.sh  run_docker.sh  test.py
src/: app.rs  cli.rs  client.rs  main.cpp  main.rs  mavan.hpp  model.rs
tests/: testDatabase.py
tsc-src/: main.ts
workspace/: example.py  main.py  multiply.py
(+38 files in other folders)
