[package]
name = "djinn"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["cargo"] }
dotenv = "0.15.0"
json = "0.12.4"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = "1.40.0"
